--- a/index.html
+++ b/index.html
@@ -508,8 +508,7 @@
                 <span class="heading1">Kingdom Painting Services</span>
                 <br class="heading1" />
                 <span>
-                  Transforming Spaces with Quality Painting Services from Taupo
-                  to Kapiti Coast.
+                  Transforming Spaces with Quality Painting Services.
                 </span>
                 <br />
                 <br />
