--- a/index.html
+++ b/index.html
@@ -678,25 +678,11 @@
                 </div>
                 <div class="question1-container">
                   <span class="question1-text heading3">
-                    <span>Are your painters licensed and insured?</span>
+                    <span>Where do you offer your services?</span>
                   </span>
                   <span class="bodySmall">
                     <span>
-                      Yes, all our painters are licensed professionals and we
-                      are fully insured for your peace of mind.
-                    </span>
-                  </span>
-                </div>
-                <div class="question1-container">
-                  <span class="question1-text heading3">
-                    <span>
-                      Do you provide a warranty for your painting services?
-                    </span>
-                  </span>
-                  <span class="bodySmall">
-                    <span>
-                      Yes, we provide a warranty for our painting services to
-                      ensure customer satisfaction and quality workmanship.
+                      Kingdom provides painting services in Makotuku, Ormondville, Norsewood, Takapau, and Dannevirke.
                     </span>
                   </span>
                 </div>
