--- a/index.html
+++ b/index.html
@@ -77,13 +77,7 @@
               <span class="home-nav12 bodySmall">Home</span>
               <span class="home-nav22 bodySmall">Services</span>
               <span class="home-nav32 bodySmall">Gallery</span>
-              <span class="home-nav42 bodySmall">Testimonials</span>
-              <span class="home-nav52 bodySmall">Contact</span>
             </nav>
-            <div class="home-buttons">
-              <button class="buttonFlat">Login</button>
-              <button class="buttonFilled">Register</button>
-            </div>
           </div>
           <div class="social-icons">
             <!-- Twitter, Instagram, Facebook icons here -->
@@ -101,6 +95,12 @@
             Email: kevin@kingdom.org.nz<br>
             Phone: 020 4069 6358
           </h1>
+          <img 
+            src="BeforeAndAfter/1 Exterior - Before & After 2.jpg" 
+            alt="Before and after work." 
+            loading="lazy"
+            style="max-width:100%; height:auto;"
+          />
         </div>
       </section>
 
