--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kingdom Painting</n    </title>
+    <title>Kingdom Painting</title>
 
     <!-- Open Graph / Twitter Card -->
     <meta property="og:title" content="Kingdom Painting">
