--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       }
       body {
         margin: 0;
+        padding: 0;
         font-family: 'Inter', sans-serif;
         font-size: 16px;
         font-weight: 400;
