--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         font-size: 16px;
         font-weight: 400;
         color: var(--dl-color-gray-black);
-        background-color: var(--dl-color-gray-white);
+        background-color: var(--dl-color-custom-neutral-light); /* #FBF9EF */
       }
       *, *::before, *::after {
         box-sizing: border-box;
