--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kingdom Painting</title>
 
+
+        <!-- Open Graph / Twitter Card -->
+    <meta property="og:title" content="Kingdom Painting">
+    <meta property="og:image" content="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/0be7b666-4592-4811-8006-ba84255b3008/f775afff-667b-422f-baca-ac49e9703b3a?org_if_sml=1&force_format=original">
+    <meta name="twitter:card" content="summary_large_image">
+    
     <!-- Favicon -->
     <link rel="shortcut icon" href="public/screenshot 2024-03-10 192546.png" type="image/png" sizes="32x32">
 
