--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kingdom Painting</title>
 
-
-        <!-- Open Graph / Twitter Card -->
-    <meta property="og:title" content="Kingdom Painting">
-    <meta property="og:image" content="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/0be7b666-4592-4811-8006-ba84255b3008/f775afff-667b-422f-baca-ac49e9703b3a?org_if_sml=1&force_format=original">
-    <meta name="twitter:card" content="summary_large_image">
-    
     <!-- Favicon -->
     <link rel="shortcut icon" href="public/screenshot 2024-03-10 192546.png" type="image/png" sizes="32x32">
 
@@ -20,6 +14,7 @@
           href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./index.css">
 
     <!-- Base & Utility Styles -->
     <style>
