--- a/index.html
+++ b/index.html
@@ -465,9 +465,6 @@
                 <nav class="home-links">
                   <span class="home-nav12 bodySmall">Home</span>
                   <span class="home-nav22 bodySmall">Services</span>
-                  <span class="home-nav32 bodySmall">Gallery</span>
-                  <span class="home-nav42 bodySmall">Testimonials</span>
-                  <span class="home-nav52 bodySmall">Contact</span>
                 </nav>
                 <div class="home-buttons">
                   <button class="buttonFlat">Login</button>
@@ -518,6 +515,7 @@
                 <span>Email: kevin@kingdom.org.nz</span>
                 <br />
                 <span>Phone: 020 4069 6358</span>
+                <img src="BeforeAndAfter/1 Exterior - Before & After 2.jpg" alt="My Logo" width="612" height="234">
               </h1>
             </div>
           </div>
