--- a/index.html
+++ b/index.html
@@ -515,7 +515,13 @@
                 <span>Email: kevin@kingdom.org.nz</span>
                 <br />
                 <span>Phone: 020 4069 6358</span>
-                <img src="BeforeAndAfter/1 Exterior - Before & After 2.jpg" alt="My Logo" width="612" height="234">
+                <img 
+      src="BeforeAndAfter/1 Exterior - Before & After 2.jpg" 
+      alt="Painter at work" 
+      class="home-banner-image"
+      width="100%" 
+      height="auto"
+    />
               </h1>
             </div>
           </div>
