--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       <h1>Kingdom Painting Services</h1>
       <p>Transforming Spaces with Quality Painting Services.</p>
       <p>Email: kevin@kingdom.org.nz | Phone: 020 4069 6358</p>
-      <img src="BeforeAndAfter/1 Exterior - Before & After 2.jpg" alt="My Logo" width="612" height="234">
+        <div style="text-align: center;">
+        <img src="BeforeAndAfter/1 Exterior - Before & After 2.jpg" alt="My Logo" width="612" height="234">
+        </div>
     </div>
   </section>
 
