--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="container">
       <h1>Kingdom Painting Services</h1>
       <p>Transforming Spaces with Quality Painting Services.</p>
+      <p>Contact us today!</p>
       <p>Email: kevin@kingdom.org.nz | Phone: 020 4069 6358</p>
         <div style="text-align: center;">
         <img src="BeforeAndAfter/1 Exterior - Before & After 2.jpg" alt="My Logo" width="612" height="234">
