--- a/index.html
+++ b/index.html
@@ -65,15 +65,19 @@
       <h2>FAQ</h2>
       <div class="faq-item">
         <h3>What services do you offer?</h3>
-        <p>Interior, exterior, residential, and commercial painting.</p>
+        <p>We offer a wide range of painting services including interior painting, exterior painting, commercial painting, and residential painting.</p>
       </div>
       <div class="faq-item">
         <h3>How to request a quote?</h3>
-        <p>Contact us via phone or email.</p>
+        <p>You can request a quote by contacting us directly via phone or email.</p>
       </div>
       <div class="faq-item">
         <h3>Where do you operate?</h3>
-        <p>Makotuku, Ormondville, Norsewood, Takapau, and Dannevirke.</p>
+        <p>Kingdom provides painting services in Makotuku, Ormondville, Norsewood, Takapau, and Dannevirke.</p>
+      </div>
+      <div class="faq-item">
+        <h3>What sets Kingdom Painting apart from other painting companies?</h3>
+        <p>At Kingdom Painting, we prioritize customer satisfaction, attention to detail, and delivering high-quality results on every project we undertake.</p>
       </div>
     </div>
   </section>
