--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kingdom Painting</title>
   <link rel="stylesheet" href="./style.css">
+  <!-- Standard favicon -->
+<link rel="icon" href="public/Favicon.png" type="image/x-icon">
 </head>
 <body>
   <!-- Floating Navbar -->
