--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kingdom Painting</title>
   <link rel="stylesheet" href="./style.css">
   <!-- Standard favicon -->
-<link rel="icon" href="public/Favicon.png" type="image/x-icon">
+<link rel="icon" href="public/Kingdom Logo-Photoroom.png" type="image/x-icon">
 </head>
 <body>
   <!-- Floating Navbar -->
