--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <!-- Floating Navbar -->
   <header class="navbar">
     <div class="container">
+      <!-- Logo as an anchor for “home” -->
+    <a href="/" class="navbar-logo-link">
+      <img src="public/Kingdom Logo-Photoroom.png" alt="Kingdom Logo" class="navbar-logo">
+    </a>
       <span class="logo">KINGDOM</span>
       <nav>
         <ul class="nav-list">
